--- a/assets/sass/abstract/_vars.scss
+++ b/assets/sass/abstract/_vars.scss
@@ -35,31 +35,31 @@ $box_shadow: 0 12px 23px 0 rgb(62 73 84 / 4%);
 
 // COLORS
 html {
-  --clr_accent: hsl(165, 88%, 45%);
-  --clr_bg: hsl(0, 0%, 95%);
-  --clr_grd_1: hsl(164, 100%, 45%);
-  --clr_grd_2: hsl(180, 98%, 40%);
-  --clr_grd_3: hsl(164, 99%, 45%);
-  --clr_grd_4: hsl(169, 100%, 42%);
+  --clr_accent: hsl(165 88% 45%);
+  --clr_bg: hsl(0 0% 95%);
+  --clr_grd_1: hsl(164 100% 45%);
+  --clr_grd_2: hsl(180 98% 40%);
+  --clr_grd_3: hsl(164 99% 45%);
+  --clr_grd_4: hsl(169 100% 42%);
   --clr_grd_bg: linear-gradient(
     var(--grd_deg),
     var(--clr_grd_1),
     var(--clr_grd_2)
   );
-  --clr_white: hsl(0, 0%, 100%);
+  --clr_white: hsl(0 0% 100%);
   --clr_accent_to_dark: var(--clr_accent);
   --clr_white_grd_btns: var(--clr_white);
-  --clr_black: hsl(210, 57%, 22%);
+  --clr_black: hsl(210 57% 22%);
   // --clr-black: 210 57% 22%;
 
-  --clr_accent_light: hsl(165, 88%, 90%);
+  --clr_accent_light: hsl(165 88% 90%);
   --clr_backbtn_icontainer: var(--clr_accent_light);
 
   --clr_card_bg: var(--clr_white);
   --clr_sidecard_bg: var(--clr_white);
   --clr_recipeitem_bg: var(--clr_grd_1);
-  --clr_recipeitem_content_bg: hsla(0, 0%, 100%, 0.09);
-  --clr_recipeitem_right_bg: hsla(165, 88%, 45%, 0.7);
+  --clr_recipeitem_content_bg: hsla(0 0% 100% / 0.09);
+  --clr_recipeitem_right_bg: hsla(165 88% 45% / 0.7);
   --clr_recipeitem_right_mobile: linear-gradient(
     180deg,
     var(--clr_grd_3),
@@ -76,24 +76,27 @@ html {
   //   hsl(210 57% 22% / 0.4),
   //   hsl(210 57% 22% / 0.1)
   // );
+
+  // --box_shadow_alpha: 0 0 0 8px hsl(var(--clr_white) / 0.4);
+  --box_shadow_alpha: 0 0 0 8px hsl(0 0% 100% / 0.4);
 }
 
-html [data-theme='dark'] {
-  --clr_accent: hsl(165, 70%, 45%);
-  --clr_bg: hsl(240, 30%, 10%);
-  --clr_grd_1: hsl(236, 33%, 20%);
-  --clr_grd_2: hsl(240, 28%, 10%);
+html [data-theme="dark"] {
+  --clr_accent: hsl(165 70% 45%);
+  --clr_bg: hsl(240 30% 10%);
+  --clr_grd_1: hsl(236 33% 20%);
+  --clr_grd_2: hsl(240 28% 10%);
   --clr_grd_bg: linear-gradient(
     var(--grd_deg),
     var(--clr_grd_1),
     var(--clr_grd_2)
   );
   --clr_white: var(--clr_accent);
-  --clr_black: hsl(236, 20%, 38%);
+  --clr_black: hsl(236 20% 38%);
   // --clr-black: 236 20% 38%;
 
-  // --clr_accent_light: hsl(200, 78%, 8%);
-  --clr_accent_light: hsl(236, 30%, 13%);
+  // --clr_accent_light: hsl(200 78% 8%);
+  --clr_accent_light: hsl(236 30% 13%);
   --clr_backbtn_icontainer: var(--clr_accent);
   --clr_accent_to_dark: var(--clr_bg);
   --clr_white_grd_btns: var(--clr_grd_bg);
@@ -114,7 +117,7 @@ html [data-theme='dark'] {
   --clr_recipeitem_content_bg: linear-gradient(
     0deg,
     var(--clr_grd_2),
-    hsl(236, 33%, 15%)
+    hsl(236 33% 15%)
   );
   --clr_recipeitem_right_bg: var(--clr_grd_bg);
   --clr_recipeitem_right_mobile: var(--clr_grd_bg);
@@ -129,6 +132,16 @@ html [data-theme='dark'] {
   .recipeitem__title {
     color: var(--clr_accent);
   }
+
+  //TODO za promenu ukoliko zelimo i alpha: hsl(var(--clr-accent) / .2)
+  --clr-accent: 165 70% 45%;
+  --clr-grd-1: 236 33% 20%;
+  --clr-grd-2: 240 28% 10%;
+  --clr-black: 210 57% 22%;
+  --clr-white: var(--clr-accent);
+  --clr-bg: 240 30% 10%;
+
+  --box_shadow_alpha: var(--box_shadow_accent);
 }
 
 // CUBICS
