--- a/assets/sass/abstract/_animations.scss
+++ b/assets/sass/abstract/_animations.scss
@@ -1,14 +1,18 @@
 .recipecard-enter-active {
-  transition: transform 0.4s $outBack, opacity 0.4s linear;
+  transition: transform 0.4s ease, opacity 0.4s linear;
 }
 .recipecard-enter,
 .recipecard-leave-to {
   opacity: 0;
-  transform: scale(0.7) translate3d(0, 100%, 0);
+  // transform: scale(0.7) translate3d(0, 20%, 0);
+  transform: translate3d(0, 20%, 0);
+  // transform: scale(0);
 }
 .recipecard-enter-to {
   opacity: 1;
-  transform: scale(1) translate3d(0, 0%, 0);
+  // transform: scale(1) translate3d(0, 0%, 0);
+  transform: translate3d(0, 0%, 0);
+  // transform: scale(1);
 }
 .recipecard-leave-active {
   transition: transform 0.2s ease, opacity 0.2s linear;
@@ -82,6 +86,35 @@
 .fadeIn-enter-to,
 .fadeIn-leave {
   opacity: 1;
+}
+
+.waiting-enter-active,
+.waiting-leave-active {
+  transition: opacity 0.3s linear;
+}
+.waiting-enter,
+.waiting-leave-to {
+  opacity: 0;
+}
+.waiting-enter-to,
+.waiting-leave {
+  opacity: 1;
+}
+
+.notification-enter-active {
+  transition: transform 0.5s $outQuart;
+}
+.notification-leave-active {
+  transition: transform 0.5s $inExpo;
+}
+.notification-enter,
+.notification-leave-to {
+  // transform: translate3d(0, -2rem, 0);
+  transform: translate3d(-100%, 0, 0);
+}
+.notification-enter-to,
+.notification-leave {
+  transform: translate3d(0, 0, 0);
 }
 
 //! KAD SU ANIMATION UKLJ ZA LOADER
