--- a/assets/sass/layouts/_recipecards.scss
+++ b/assets/sass/layouts/_recipecards.scss
@@ -53,7 +53,7 @@
 
     &::before {
       @extend %pos-abs;
-      content: '⚠️';
+      content: "⚠️";
       bottom: -15%;
       right: 0%;
       width: fit-content;
@@ -177,9 +177,6 @@
         stroke: var(--clr_accent);
       }
     }
-    .recipecard__bookmark {
-      transform: scale(1.1);
-    }
   }
 
   &__figure {
@@ -190,8 +187,8 @@
     // height: 64%;
     max-height: 64%;
     border-radius: calc(var(--radius-card) - 0.8rem);
-    transition: 0.5s;
     margin-bottom: 1rem;
+    // transition: 0.5s;
 
     // box-shadow: inset -3px -100px 34px -22px rgba(0, 0, 0, 0.8);
     // z-index: 12;
@@ -210,8 +207,8 @@
 
   &__img {
     @extend %img-basic;
-    transition: 1s;
-    transform: scale(1.1);
+    transition: transform 1s $outSmooth;
+    // transform: scale(1.1);
   }
 
   &__body {
@@ -294,7 +291,6 @@
     }
   }
   &__bookmark {
-    will-change: transform;
     --size: 4.2rem;
     width: var(--size);
     height: var(--size);
@@ -303,7 +299,7 @@
     border-radius: 0.8em;
     background: var(--clr_accent_light);
     z-index: 2;
-    transition: transform 0.3s;
+    // transition: transform 0.3s;
 
     &-svgs {
       @extend %pos-rel;
@@ -312,39 +308,43 @@
     }
 
     &-svg {
+      will-change: transform, opacity;
+
       --svg-size: 2.4rem;
       @extend %pos-abs;
       height: var(--svg-size);
       width: var(--svg-size);
       fill: var(--clr_accent);
-      transition: 0.3s;
+      z-index: 1;
+      transition: transform 0.5s $outSmooth, opacity 0.5s $outSmooth;
 
       &--outline {
-        z-index: 1;
-        // transform: scale(0);
-        // transition: 0.5s;
+        opacity: 1;
+        transform: scale(1);
       }
       &--filled {
-        z-index: 1;
         opacity: 0;
         transform: scale(0.4);
-        transition: 0.5s;
       }
     }
 
     &:hover {
-      .recipecard__bookmark-svg--filled {
-        transform: scale(1);
-        opacity: 1;
-      }
       .recipecard__bookmark-svg--outline {
-        transform: scale(0);
         opacity: 0;
+        transform: scale(0);
+      }
+      .recipecard__bookmark-svg--filled {
+        opacity: 1;
+        transform: scale(1);
       }
     }
 
     &--saved {
       @extend .recipecard__bookmark, :hover;
+      transition: transform 0.5s $outSmooth, opacity 0.5s $outSmooth;
+      // &:hover {
+      //   transition: none !important;
+      // }
     }
   }
 }
