--- a/assets/sass/layouts/recipeitem/_steps.scss
+++ b/assets/sass/layouts/recipeitem/_steps.scss
@@ -53,7 +53,7 @@
       }
 
       &::after {
-        content: 'step';
+        content: "step";
         font-size: 0.4em;
         display: inline-flex;
         opacity: 0.9;
@@ -66,16 +66,17 @@
       }
 
       &::before {
-        content: '\2039';
-        content: '\00AB';
+        content: "\2039";
+        content: "\00AB";
         color: currentColor;
         @extend %pos-abs;
         bottom: 0%;
-        left: 5%;
+        left: 24%;
         font-size: 1.3em;
         @extend %fw-400;
-        transform: rotate(-90deg);
+        transform: rotate(-90deg) translate(-5px, 0);
         display: none;
+        transform-origin: center center;
 
         @include device(phone-land) {
           display: block;
